# libgkit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build-test.yml  linux-build-test.yml  linux-debug-build-test.yml  pr-to-feishu.yml  windows-debug-build-test.yml
binding/rust/: Cargo.toml  build.rs
binding/rust/src/: build.rs  lib.rs
binding/rust/src/application/: application.rs
binding/rust/src/graphic/: window.rs
cmake/: common.cmake
include/gkit/: gkit.hpp
include/gkit/core/: gkit.hpp  processer.hpp
include/gkit/core/input/: action.hpp  input.hpp  keys.hpp  mouse.hpp
include/gkit/core/resource/: resource_loader.hpp
include/gkit/core/scene/: object.hpp  singleton.hpp  singleton_unit.hpp  unit.hpp
include/gkit/graphic/: Renderer.hpp  Shader.hpp
include/gkit/graphic/opengl/: FrameBuffer.hpp  IndexBuffer.hpp  RenderBuffer.hpp  StateManager.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  config.hpp
include/gkit/math/: color.hpp  constants.hpp  matrix3.hpp  matrix4.hpp  scalar.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/gkit/resource/: metadata.hpp  resource.hpp  resource_loader.hpp  texture.hpp
include/gkit/scene/2d/: object2d.hpp  renderable2d.hpp  transform2d.hpp
include/gkit/utils/: log.hpp
src/: CMakeLists.txt
src/c_abi/: CMakeLists.txt
src/core/: CMakeLists.txt  application.cpp  processer.cpp
src/core/event/: dispatcher.hpp
src/core/graphic/: window.cpp
src/core/include/: application.hpp  gkit.hpp
src/core/include/graphic/: window.hpp
src/core/include/input/: input.hpp  keydef.hpp
src/core/include/resource/: resource_loader.hpp
src/core/include/scene/: README.md  object.hpp  unit.hpp  unit.tpp
src/core/include/utils/: Singleton.hpp  vector2.hpp  vector3.hpp
src/core/input/: action.cpp  cache.cpp  cache.hpp  input.cpp
src/core/scene/: unit.cpp
src/core/utils/: vector2.cpp  vector3.cpp
src/graphic/: CMakeLists.txt  Renderer.cpp  Shader.cpp
src/graphic/opengl/: FrameBuffer.cpp  IndexBuffer.cpp  RenderBuffer.cpp  StateManager.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  config.cpp
src/math/: CMakeLists.txt  color.cpp  matrix3.cpp  matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/misc/: CMakeLists.txt  sdl_event_dispatcher.cpp  sdl_event_dispatcher.hpp
src/resource/: CMakeLists.txt  metadata.cpp  resource.cpp  resource_loader.cpp  texture.cpp
src/scene/: CMakeLists.txt
src/scene/2d/: object2d.cpp  transform2d.cpp
src/utils/: CMakeLists.txt  log.cpp
test/: CMakeLists.txt
test/core/graphic/: window_test.cpp
test/core/input/: min_window_for_input_test.hpp  test_key_input.cpp  test_mouse_input.cpp
test/core/scene/: test_unit.cpp  test_unit_iterator.cpp
test/core/utils/: test_vector2.cpp  test_vector3.cpp
test/graphic/: basic.shader  post_process.shader  test_window.cpp  texture.shader
test/math/: test_color.cpp  test_math.cpp  test_matrix3.cpp  test_matrix4.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
test/resource/: test_metadata.cpp
test/rust_binding/: Cargo.toml
test/rust_binding/src/: main.rs
test/rust_binding/src/graphic/: window.rs
test/utils/: test_log.cpp
